--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 data/carta_apc_out.parquet
 data/carta-apc.parquet
+*.pyc
+src/*.pyc
+src/__pycache__/data_utils.cpython-39.pyc
+src/__pycache__/plot_utils.cpython-39.pyc
+__pycache__
