--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/__pycache__/data_utils.cpython-39.pyc
 src/__pycache__/plot_utils.cpython-39.pyc
 __pycache__
 pages/stringplot.ipynb
+pages/tst.py
